[project]
name = "images-georeferencement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "exiftool-wrapper>=0.3.0",
    "geomag>=0.9.2015",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyexiftool>=0.5.6",
    "pyproj>=3.7.2",
    "python-dateutil>=2.9.0.post0",
    "rasterio>=1.4.3",
]
